# resumerator

./: .gitignore  Cargo.toml  flake.nix  readme.md  resume.toml  rust-toolchain.toml
examples/: my-resume.toml
src/: main.rs
templates/: resume.html  styles.css
