[package]
name = "resumerator"
version = "0.1.0"
edition = "2021"

[dependencies.toml]
version = "1.1.0"
default-features = false
features = ["parse", "serde"]

[dependencies.serde]
version = "1.0.217"
default-features = false
features = ["alloc", "derive"] 

[dependencies.askama]
version = "0.14.0"
default-features = false
features = ["derive", "std"] 
